--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@ tw-passage {
 
 tw-icon {
   opacity: 1.0;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Oy vey" tags="" position="753.5,295.5" size="100,100">Wake up. It&#39;s time to catch a plane down under. You will be filming in Melbourne next week. You throw on your diamonte cowboy boots, white jeans, tassel crop top and oversized, bejewelled cowboy hat and [[head to LAX]].</tw-passagedata><tw-passagedata pid="2" name="head to LAX" tags="" position="753.5,445.5" size="100,100">You make a rockstar entrance onto the plane. Unfortunately, there had been a mistake with the booking and your producers have you seated in economy. 
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Oy vey" tags="" position="753.5,295.5" size="100,100">Wake up. It&#39;s time to catch a plane down under. You will be filming in Melbourne next week. You throw on your diamante cowboy boots, white jeans, tassel crop top and oversized, bejewelled cowboy hat and [[head to LAX]].</tw-passagedata><tw-passagedata pid="2" name="head to LAX" tags="" position="753.5,445.5" size="100,100">You make a rockstar entrance onto the plane. Unfortunately, there had been a mistake with the booking and your producers have you seated in economy. 
 
 You take your seat next to a sunkissed blonde broad named Stephie Sweetwater. 
 
-You get to talking she is an Australian horse wrangler who has been out here for a rodeo. She invites you to her town for her farms annual barn dance in Sale next weekend.
+You get to talking and discover that she is an Australian horse wrangler who has been in the States for a rodeo. She invites you to her town for her farm&#39;s annual barn dance in Sale next weekend.
 
 Say &quot;[[Yee Haa]]&quot; and agree to join Steph.
 
-[[Politely decline]] surely Melbourne has more to offer, and you are beginning to feel as if you have been to one to many rodeos.</tw-passagedata><tw-passagedata pid="3" name="Yee Haa" tags="" position="678.5,595.5" size="100,100">After a tough week of filming, you are excited to get out of melbourne and &#39;Hoe Down&#39;. 
+[[Politely decline]. Surely Melbourne has more to offer, and you are beginning to feel as if you have been to one too many rodeos.</tw-passagedata><tw-passagedata pid="3" name="Yee Haa" tags="" position="678.5,595.5" size="100,100">After a tough week of filming, you are excited to get out of Melbourne and &#39;hoe down&#39;. 
 
-Stephie picks you up in her ute but unfortunately her stinky sheep dog is sitting in the seat next to her so you have to sit in the back trailer with the hay bales. Oh Well, you feel freer than you have in years!
+Stephie picks you up in her ute. Unfortunately her stinky sheep dog is sitting in the seat next to her so you have to sit in the back trailer with the hay bales. Oh well, you feel freer than you have in years!
 
-That night, amidst the dust storm of friendly hoe-downers a swaggering young man with a wheat grain seductively balanced in his mouth challenges you to a Do-si-do (Barn style).
+That night, amidst the dust storm of friendly hoe-downers a swaggering young man with a wheat grain seductively balanced in his mouth challenges you to a do-si-do (barn style).
 
 Do you [[accept the challenge]]? Or side-step out of there - you have [[Filming in the morning]]!</tw-passagedata><tw-passagedata pid="4" name="Politely decline" tags="" position="832.5,600.5" size="100,100">After a long week of filming, you and your co-stars decide to find out what this quaint little town has to offer for a glamorous gaggle of out of towners. 
 
@@ -45,21 +45,21 @@ You stumble out of the studio and into the nearest jelly shots establishment, wh
 
 You are distracted from the game by the overwhelming scent of an approaching perfume cloud. From within it emerges Claudio, dressed in leopard print and an open shirt that reveals a hairy chest and some rolls of money. He is quite the man about Crown, and invites your crew to a club in the city.
 
-There are mixed feelings and your group decides to split. Do you [[stay loyal to the house party]] or [[follow the party boy to the club]].</tw-passagedata><tw-passagedata pid="5" name="accept the challenge" tags="" position="491.5,747.5" size="100,100">You link arms with this strapping suitor as he spins and whirls you through the air. He&#39;s go moves - that&#39;s for sure! You collapse into a sweaty heap, atop a hay bale. He has won the barn dance, and maybe your heart!
+There are mixed feelings and your group decides to split. Do you [[stay loyal to the house party]] or [[follow the party boy to the club]].</tw-passagedata><tw-passagedata pid="5" name="accept the challenge" tags="" position="491.5,747.5" size="100,100">You link arms with this strapping suitor as he spins and whirls you through the air. He&#39;s got moves - that&#39;s for sure! You collapse into a sweaty heap atop a hay bale. He has won the barn dance, and maybe your heart!
 
-He invites you for a VB back at his converted shed at the back of his parents farm. 
+He invites you for a VB back at his converted shed at the back of his parent&#39;s farm. 
 
 You are parched so you [[eagerly accept his offer]]. 
 
-As you begin to sober up, you begin to notice this man is a little scruffier than you recall so you hottail it out of there - you have [[Filming in the morning]]!</tw-passagedata><tw-passagedata pid="6" name="Filming in the morning" tags="" position="617.5,815.5" size="100,100">You arrive to the set late, it seems you have contracted a rare strain of Sheep flu only existing in Australia. 
+As you begin to sober up, you begin to notice this man is a little scruffier than you recall so you hot tail it out of there - you have [[Filming in the morning]]!</tw-passagedata><tw-passagedata pid="6" name="Filming in the morning" tags="" position="617.5,815.5" size="100,100">You arrive to the set late. It seems you have contracted a rare strain of sheep flu that only exists in Australia. 
 
-You are barely well enough to finish shooting the rest of the TV series in Australia. You spend your nights pining for the comfort of LA - especially your recently discovered spiritual counsellor and Aerobics instructor Sergé.
+You are barely well enough to finish shooting the rest of the TV series in Australia. You spend your nights pining for the comfort of LA - especially your recently discovered spiritual counsellor and aerobics instructor Sergé.
 
-You head back with mix reviews of Australia and a lifelong aversion to barn dances and the outdoors.
+You head back with mixed reviews of Australia and a lifelong aversion to barn dances and the outdoors.
 
 [[Oy vey]].</tw-passagedata><tw-passagedata pid="7" name="eagerly accept his offer" tags="" position="438.5,907.5" size="100,100">One VB at the barn turns into 25 years, and you end up in a trailer with Jonno and a brood of badly behaved rugrats. 
 
-You spend your years frying bacon and mars bars at the local milkbar, watching neighbours everynight, wondering what could have been.
+You spend your years frying bacon and mars bars at the local milkbar and watching Neighbours everynight, wondering what could have been.
 
 [[Oy vey]]</tw-passagedata><tw-passagedata pid="8" name="stay loyal to the house party" tags="" position="757.5,762.5" size="100,100">You walk into the party and a sea of short haired women in berets, jeans and flannel shirts shoot you confused looks. It seems like the LA cowgirl aesthetic hasn&#39;t hit Carlton yet.
 
@@ -68,9 +68,9 @@ You help yourself to an open bottle of red wine and eaves drop on psuedo-intelle
 The only person who talks to you is a 12 year old kid, who offers you a cigarette. Things are getting too weird, even for you. You excuse yourself and head back to the hotel. Scarred by your experience in the inner north, you remain in the southside for the remainder of your time in Melbourne, before gratefully returning to LA. 
 
 [[Oy vey]].
-</tw-passagedata><tw-passagedata pid="9" name="follow the party boy to the club" tags="" position="907.5,750.5" size="100,100">You walk into the club and they are playing, your favourite - Bryan Ferry! Claudio escorts you to a VIP area where the Moet is flowing.
+</tw-passagedata><tw-passagedata pid="9" name="follow the party boy to the club" tags="" position="907.5,750.5" size="100,100">You walk into the club and they are playing your favourite - Bryan Ferry! Claudio escorts you to a VIP area where the Moet is flowing.
 
-You find yourself lost in the groove. You loose your sense of time and place, but through the smoke machine mist you spot a gyrating rump unlike anything you have ever seen. 
+You find yourself lost in the groove. You lose your sense of time and place, but through the smoke machine mist you spot a gyrating rump unlike anything you have ever seen. 
 
 Possessed by the rump, you follow it through the haze and to the bar. 
 
