--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ tw-passage {
 
 tw-icon {
   opacity: 1.0;
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Oy vey" tags="" position="753.5,295.5" size="100,100">Wake up. It&#39;s time to catch a plane down under. You will be filming in Melbourne next week. You throw on your diamante cowboy boots, white jeans, tassel crop top and oversized, bejewelled cowboy hat and [[head to LAX]].</tw-passagedata><tw-passagedata pid="2" name="head to LAX" tags="" position="753.5,445.5" size="100,100">You make a rockstar entrance onto the plane. Unfortunately, there had been a mistake with the booking and your producers have you seated in economy. 
+}</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Oy vey" tags="" position="753.5,296.5" size="100,100">Wake up. It&#39;s time to catch a plane down under. You will be filming in Melbourne next week. You throw on your diamante cowboy boots, white jeans, tassel crop top and oversized, bejewelled cowboy hat and [[head to LAX]].</tw-passagedata><tw-passagedata pid="2" name="head to LAX" tags="" position="753.5,445.5" size="100,100">You make a rockstar entrance onto the plane. Unfortunately, there had been a mistake with the booking and your producers have you seated in economy. 
 
 You take your seat next to a sunkissed blonde broad named Stephie Sweetwater. 
 
@@ -33,7 +33,7 @@ You get to talking and discover that she is an Australian horse wrangler who has
 
 Say &quot;[[Yee Haa]]&quot; and agree to join Steph.
 
-[[Politely decline]. Surely Melbourne has more to offer, and you are beginning to feel as if you have been to one too many rodeos.</tw-passagedata><tw-passagedata pid="3" name="Yee Haa" tags="" position="678.5,595.5" size="100,100">After a tough week of filming, you are excited to get out of Melbourne and &#39;hoe down&#39;. 
+[[Politely decline]]. Surely Melbourne has more to offer, and you are beginning to feel as if you have been to one too many rodeos.</tw-passagedata><tw-passagedata pid="3" name="Yee Haa" tags="" position="678.5,595.5" size="100,100">After a tough week of filming, you are excited to get out of Melbourne and &#39;hoe down&#39;. 
 
 Stephie picks you up in her ute. Unfortunately her stinky sheep dog is sitting in the seat next to her so you have to sit in the back trailer with the hay bales. Oh well, you feel freer than you have in years!
 
